<resources>
    <string name="cab_deselectAll">Deselect All</string>
    <string name="cab_itemsSelectedFormat">%1$d selected</string>
    <string name="cab_selectAll">Select All</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="contentDescription_thumbnail">Thumbnail</string>
    <string name="details_action_delete">Delete</string>
    <string name="details_action_editDateTaken">Edit date taken</string>
    <string name="details_action_editLocation">Edit location</string>
    <string name="details_action_editTags">Edit tags</string>
    <string name="details_action_rotate">Rotate</string>
    <string name="details_action_share">Share…</string>
    <string name="details_label_aperture">Aperture:</string>
    <string name="details_label_cameraModel">Model:</string>
    <string name="details_label_cameraSettings">Camera Settings</string>
    <string name="details_label_coordinates">Coordinates:</string>
    <string name="details_label_dateTaken">Date taken:</string>
    <string name="details_label_digitalZoomFactor">Digital zoom amount:</string>
    <string name="details_label_exposureTime">Exposure time:</string>
    <string name="details_label_fileInfo">File Info</string>
    <string name="details_label_filePath">File path:</string>
    <string name="details_label_fileSize">File size:</string>
    <string name="details_label_flash">Flash:</string>
    <string name="details_label_focalLength">Focal length:</string>
    <string name="details_label_isoValue">ISO value:</string>
    <string name="details_label_location">Location:</string>
    <string name="details_label_resolution">Resolution:</string>
    <string name="details_label_savedTo">Saved to:</string>
    <string name="details_menu_showDetails">Show details</string>
    <string name="details_message_coordinatesFormat">Latitude:\t%1$s %2$f\nLongitude:\t%3$s %4$f</string>
    <string name="details_message_flashOff">Off</string>
    <string name="details_message_flashOn">On</string>
    <string name="details_message_lookingUpLocation"><![CDATA[<i>Looking up location…</i>]]></string>
    <string name="details_message_unknownBrand"><![CDATA[<i>Unknown Brand</i>]]></string>
    <string name="details_message_unknownLocation"><![CDATA[<i>Unknown</i>]]></string>
    <string name="details_message_unknownLocation_noInternet"><![CDATA[<i>Unknown (No internet?)</i>]]></string>
    <string name="details_message_unknownModel"><![CDATA[<i>Unknown Model</i>]]></string>
    <string name="details_title">Details</string>
    <string name="dialog_message_deleteMultiplePictures">Are you sure you want to delete %d pictures?</string>
    <string name="dialog_message_deletePicture">Are you sure you want do delete this picture?</string>
    <string name="dialog_title_areYouSure">Are you sure?</string>
    <string name="dialog_title_somethingWentWrong">Something went wrong :/</string>
    <string name="editLabels_confirm_removeTag">Are you sure you want to remove this tag?</string>
    <string name="editLabels_enterNewTag">Enter new tag…</string>
    <string name="editLabels_error_emptyTagName">You did not specify a tag name.</string>
    <string name="editLabels_message_tagNotRemoved">Tag could not be removed.</string>
    <string name="editLabels_message_tagRemoved">Tag removed.</string>
    <string name="error_noPictures">No pictures found.</string>
    <string name="error_noResults">No pictures found.</string>
    <string name="locationInput_message_noLocationFound">No location found.</string>
    <string name="locationInput_message_saveToFileFailed">Location could not be saved to file.</string>
    <string name="locationInput_message_searchDoesNotWorkWithoutInternet">Location search does not work without internet.</string>
    <string name="locationInput_nothingSelected">Nothing selected.</string>
    <string name="locationInput_saveToFile">Save to image file</string>
    <string name="locationInput_searchHint">Search for a place, or tap on map</string>
    <string name="locationInput_selectedLocation">Selected location:</string>
    <string name="message_deletingPictures">Deleting…</string>
    <string name="message_loading">Loading…</string>
    <string name="message_multiplePicturesDeleted">%d pictures deleted.</string>
    <string name="message_multiplePicturesFound">%d pictures found.</string>
    <string name="message_onePictureFound">%d picture found.</string>
    <string name="message_pictureDeleted">Picture deleted.</string>
    <string name="message_pictureNotDeleted">Picture could not be deleted.</string>
    <string name="message_pictureNotDeleted_fileNotExist">Picture could not be deleted. File does not exist anymore.</string>
    <string name="message_preparingToShare">Preparing to share…</string>
    <string name="navigation_date">Date</string>
    <string name="navigation_date_older">Older…</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_folder_other">Every folder…</string>
    <string name="navigation_folders">Folders</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_people">People</string>
    <string name="navigation_people_other">Everyone…</string>
    <string name="navigation_places">Places</string>
    <string name="navigation_places_other">All places…</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_tags">Tags</string>
    <string name="navigation_tags_other">Every tag…</string>
    <string name="no">No</string>
    <string name="not_available">--</string>
    <string name="preferences_about_summary">Information about the app and used software.</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_webPage_summary" translatable="false">http://github.com/mrolcsi/SPOC</string>
    <string name="preferences_webPage_title">Visit webpage</string>
    <string name="refresh_title">Refresh</string>
    <string name="save">Save</string>
    <string name="search_hint">Search…</string>
    <string name="search_message_helpText"><![CDATA[Search in filenames,<br>directories, like <i>Pictures</i> or <i>Download</i>,<br>dates, like <i>2015</i> or <i>august</i>,<br>locations, like <i>Paris</i> or <i>France</i>.]]></string>
    <string name="search_title">Search</string>
    <string name="service_cache_message_done">Done! You can now freely use the app!</string>
    <string name="service_cache_message_firstTime">This might take a few minutes depending how many pictures you have.\n\nDon\'t worry, this only needs to be done once.</string>
    <string name="service_cache_title">Preparing your photos…</string>
    <string name="settings_about_label_buildNumber">Build Number:</string>
    <string name="settings_about_label_version">Version:</string>
    <string name="settings_about_title">About</string>
    <string name="settings_blacklist_help"><![CDATA[Images inside directories included in the <b>Blacklist</b> will not appear in your Gallery.]]></string>
    <string name="settings_blacklist_summary">Select directories to exclude from Gallery</string>
    <string name="settings_blacklist_title">Blacklist</string>
    <string name="settings_directoryList_add">Add directory…</string>
    <string name="settings_gallery_showCameraButton_summary">Show Camera quick launch button</string>
    <string name="settings_gallery_showCameraButton_title">Camera Quick Launch</string>
    <string name="settings_message_alreadyInTheList">Already in the list.</string>
    <string name="settings_message_directoryAdded">\'%s\' added.</string>
    <string name="settings_message_listIsEmpty">The list is empty.</string>
    <string name="settings_message_removeThisDirectory">Do you want to remove this directory from the list?</string>
    <string name="settings_message_restartNote"><![CDATA[<i>Note: Use Swipe-to-Refresh gesture when seeing thumbnails to make changes appear.</i>]]></string>
    <string name="settings_whitelist_help"><![CDATA[If by any chance you don\'t see some of your images in the Gallery, add the directories containing those images to the <b>Whitelist</b>.]]></string>
    <string name="settings_whitelist_summary">Select directories to include in Gallery</string>
    <string name="settings_whitelist_title">Whitelist</string>
    <string name="singleImage_confirm_untagFace">Are you sure you want to untag this face?</string>
    <string name="singleImage_editLocation_byMap">Pick location on map</string>
    <string name="singleImage_editLocation_byText">Enter by text</string>
    <string name="singleImage_faceTag_hint">Who is this?</string>
    <string name="singleImage_message_dateChanged">Date changed.</string>
    <string name="singleImage_message_dateNotChanged">Date could not be changed.</string>
    <string name="singleImage_message_faceNotTagged">Face could not be tagged.</string>
    <string name="singleImage_message_faceNotUntagged">Face could not be untagged.</string>
    <string name="singleImage_message_faceTagged">Face tagged.</string>
    <string name="singleImage_message_faceUntagged">Face untagged.</string>
    <string name="singleImage_message_personAlreadyTagged">That person is already tagged on this picture.</string>
    <string name="splash_button_continueInBackground">Continue in background</string>
    <string name="splash_contentDescription_logo">SPOC Logo</string>
    <string name="title_activity_gallery">SPOC Gallery</string>
    <string name="yes">Yes</string>
    <string name="title_activity_camera">SPOC Camera</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
