<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_home"
            android:checked="true"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/navigation_home" />

        <item
            android:id="@+id/navigation_date"
            android:icon="@drawable/calendar"
            android:title="@string/navigation_date" />

        <item
            android:id="@+id/navigation_places"
            android:icon="@drawable/map_marker"
            android:title="@string/navigation_places" />

        <item
            android:id="@+id/navigation_people"
            android:icon="@drawable/group"
            android:title="@string/navigation_people" />

        <item
            android:id="@+id/navigation_tags"
            android:icon="@drawable/tag"
            android:title="@string/navigation_tags" />

        <item
            android:id="@+id/navigation_folders"
            android:icon="@drawable/folder"
            android:title="@string/navigation_folders" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/settings"
            android:title="@string/navigation_settings" />

    </group>
</menu>