<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/delete"
        android:title="@string/details_action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuRotate"
        android:icon="@drawable/rotate"
        android:title="@string/details_action_rotate"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuShare"
        android:icon="@drawable/share"
        android:title="@string/details_action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuSelectAll"
        android:title="@string/cab_selectAll"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuDeselectAll"
        android:title="@string/cab_deselectAll"
        android:visible="false"
        app:showAsAction="never" />
</menu>