<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="hu.mrolcsi.android.spoc.gallery.imagedetails.ImagePagerActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <android.support.v4.view.ViewPager
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <RelativeLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/imgLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/margin_small"
            android:contentDescription="@string/details_label_location"
            android:src="@drawable/map_marker"/>

        <ImageView
            android:id="@+id/imgDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/imgLocation"
            android:layout_margin="@dimen/margin_small"
            android:contentDescription="@string/details_label_dateTaken"
            android:src="@drawable/calendar"/>

        <ImageView
            android:id="@+id/imgLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgDate"
            android:layout_margin="@dimen/margin_small"
            android:contentDescription="@string/navigation_tags"
            android:src="@drawable/tag"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgLocation"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignTop="@+id/imgLocation"
            android:layout_toEndOf="@+id/imgLocation"
            android:layout_toRightOf="@+id/imgLocation"
            android:gravity="center"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text=""/>

        <TextView
            android:id="@+id/tvDateTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgDate"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignTop="@+id/imgDate"
            android:layout_toEndOf="@+id/imgDate"
            android:layout_toRightOf="@+id/imgDate"
            android:gravity="center"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text=""/>

        <TextView
            android:id="@+id/tvLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgLabels"
            android:layout_alignTop="@+id/imgLabels"
            android:layout_toEndOf="@+id/imgLabels"
            android:layout_toRightOf="@+id/imgLabels"
            android:gravity="center"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text=""
            android:visibility="gone"/>
    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="25dp"
        android:background="@null"
        android:elevation="0dp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="UnusedAttribute"/>

</FrameLayout>
